[metadata]
name = python-cloudformscli
summary = Python Client for RedHat CloudForms 
description-file =
    README.md
author = Al Stanisic 
author-email = stana@yellowhouse.io
home-page =
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Environment :: Console

[files]
packages =
    cloudformscli 

[wheel]
universal = 1
